contrast issues addressed again

--- a/styles/base.css
+++ b/styles/base.css
@@ -33,7 +33,7 @@ h3 {
     border-radius: .5em .5em 0 0
 }
 
-nav a:link, a:visited, a:hover, a:active {
+nav a:link, nav a:visited, nav a:hover, nav a:active {
     text-decoration: none;
     color: white;
 }
